@@ -1,3 +1,10 @@
+2008-12-9 John Wu <John.Wu at ACM.org>
+	* src/ixbylt.cpp, src/ixfuge.cpp, src/ixfuzz.cpp: the function
+	coarsen contains an incorrect test, the condition (ncoarse < 5 ||
+	ncoarse <= nobs) should be (ncoarse < 5 || ncoarse >= nobs)
+	* src: minor tinkering with the print-out (while debugging an
+	application)
+
 2008-12-4 John Wu <John.Wu at ACM.org>
 	* win/Win.mak, win/MinGW.mak: update makefiles for Visual Studio's
 	nmake and GNU make under MinGW/MinSYS
